Rework backend to replace rooms/cabinets by places and build instructions by delimiters instead of fixed positions